deploy/elk/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
  labels:
    app: curl
spec:
  containers:
  - image: curlimages/curl:latest
    name: curl-container
    command:
      - /bin/sh
      - "-c"
      - "sleep infinity"
    imagePullPolicy: IfNotPresent
