deploy/elk/elk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - elk.owllark.mooo.com
    secretName: elk-certificate-tls
  rules:
  - host: elk.owllark.mooo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: elk-kibana-kibana
            port:
              number: 5601
